--- a/src/app/admin/admin.module.css
+++ b/src/app/admin/admin.module.css
@@ -154,7 +154,7 @@
 
 .statsGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, ), 1fr));
     gap: 30px;
 }
 
